# ecommerce

./: .gitignore
E-Commerce/environments/: ECommerce.bru
backend/: docker-compose.yml  main.py  pyproject.toml
backend/api/: __init__.py
backend/api/user/: __init__.py  auth.py  profile.py  reset_password.py  user.py
backend/app/controllers/: __init__.py
backend/app/controllers/user/: auth.py
backend/app/models/: __init__.py  user.py
backend/app/repositories/: user.py
backend/app/schemas/extras/: __init__.py
backend/app/schemas/requests/user/: __init__.py  auth.py
backend/app/schemas/responses/: __init__.py  user.py
backend/core/: config.py  server.py
backend/core/controller/: base.py
backend/core/database/: __init__.py  session.py  standalone_session.py
backend/core/database/mixins/: __init__.py  timestamp.py  useraudit.py
backend/core/exceptions/: __init__.py  base.py
backend/core/factory/: factory.py
backend/core/fastapi/dependencies/: authentication.py  current_user.py
backend/core/fastapi/middlewares/: __init__.py  authentication.py  sqlalchemy.py
backend/core/security/: __init__.py  jwt.py  password.py
backend/migrations/: env.py
backend/migrations/versions/: 06da1cf9577e_initial_migration.py
backend/tests/: conftest.py
backend/tests/api/: overrides.py
backend/tests/api/user/: test_authentication.py
backend/tests/core/security/: test_jwt_handler.py  test_password.py
backend/tests/factory/: user.py
backend/tests/utils/: login.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx
(+43 files in other folders)
