[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["eedu7 <mueedahmad067@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"
python-jose = "^3.3.0"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
faker = "^33.3.0"
email-validator = "^2.2.0"
httpx = "^0.28.1"
redis = "^5.2.1"
greenlet = "^3.1.1"
click = "^8.1.8"
ujson = "^5.10.0"
fastapi-event = "^0.1.3"
celery = "^5.4.0"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
